# eecs_600_robot_project1

./: .gitignore  LICENSE.txt  README.md
src/cylbot_control/: CMakeLists.txt  package.xml
src/cylbot_control/config/: cylbot_control.yaml
src/cylbot_control/launch/: cylbot_control.launch
src/cylbot_description/: CMakeLists.txt  package.xml
src/cylbot_description/robots/: cylbot.urdf.xacro
src/cylbot_description/src/: hokuyo_laser_to_pointcloud.cpp  state_publisher.cpp
src/cylbot_description/urdf/: cylbot.urdf  cylbot_base.gazebo  cylbot_base.urdf  cylbot_base.urdf.orig  multisense_sl_v3.urdf
src/cylbot_gazebo/: CMakeLists.txt  package.xml
src/cylbot_gazebo/launch/: cylbot.launch  cylbot_xbox.launch  multisense_sl.launch
src/cylbot_gazebo/maps/: bunch_of_rooms_map.yaml  bunch_of_rooms_with_stuff_map.yaml  cylbot_map.pgm  cylbot_map.yaml  cylbot_world_map.yaml  gas_station.pgm  gas_station_map.yaml  vrc_final_task1_map.yaml  vrc_final_task1_small_map.pgm  vrc_final_task1_small_map.yaml
src/cylbot_gazebo/models/bunch_of_rooms/: bunch_of_rooms.sdf  model.config
src/cylbot_gazebo/octomaps/: bunch_of_rooms_octomap.bt  cylbot_octomap.bt  vrc_final_task1_octomap.bt
src/cylbot_gazebo/worlds/: bunch_of_rooms.world  bunch_of_rooms_with_stuff.world  vrc_final_task1.world
src/cylbot_map_creator/: CMakeLists.txt  package.xml
src/cylbot_map_creator/launch/: create_map.launch
src/cylbot_map_creator/msg/: LikelihoodField.msg
src/cylbot_map_creator/src/: 2d_map_creator.cpp  likelihood_field_generator.cpp  likelihood_field_server.cpp  octomap_creator.cpp  octomap_saver.cpp  publish_likelihood_field_as_map.cpp  test_map_publisher.cpp
src/cylbot_mcl/: CMakeLists.txt  package.xml
src/cylbot_mcl/include/cylbot_mcl/: pose_cloud.h  pose_cloud2d.h  pose_cloud3d.h
src/cylbot_mcl/src/: localization_2d.cpp  localization_3d.cpp  pose_cloud.cpp  pose_cloud2d.cpp  pose_cloud3d.cpp
src/cylbot_mcl/test/: pose_cloud_tests.cpp  transform_tests.cpp
src/cylbot_motion_model/: CMakeLists.txt  package.xml
src/cylbot_motion_model/include/cylbot_motion_model/: multivariate_normal.h
src/cylbot_motion_model/src/: cylbot_velocity_info.cpp  motion_model_test.cpp  pose_array_test.cpp
src/cylbot_teleop/: CMakeLists.txt  package.xml
src/cylbot_teleop/src/: xbox_teleop.cpp
src/flann_examples/: CMakeLists.txt  package.xml
src/flann_examples/src/: flann_example.cpp  flann_example_3d.cpp
src/footstep_plan/: CMakeLists.txt  package.xml
src/footstep_plan/include/footstep_plan/: roadmap.h  visualization.h  yaml_conversions.h
src/footstep_plan/launch/: prm.launch
src/footstep_plan/msg/: FootStepPlan.msg  FootStepPose.msg
src/footstep_plan/src/: atlas_world_tf_broadcaster.cpp  display_plan.cpp  display_roadmap.cpp  generate_prm.cpp  map_transform_test.cpp  save_plan.cpp
src/footstep_plan/test/: footstep_plan.yaml  roadmap.yaml
src/footstep_plan/worlds/: bunch_of_rooms.world  bunch_of_rooms_with_stuff.world  gas_station.world  vrc_final_task1.world
src/gazebo_custom_multisense_ros_plugin/: CMakeLists.txt  package.xml
src/gazebo_custom_multisense_ros_plugin/src/: MultiSenseSLPlugin.cpp  hello_world.cpp  model_push.cpp
src/gazebo_custom_multisense_ros_plugin/worlds/: hello.world  model_push.world
src/multisense_sensor_model/: CMakeLists.txt  package.xml
src/multisense_sensor_model/include/: sensor_model.h
src/multisense_sensor_model/include/multisense_sensor_model/: sensor_model.h
src/multisense_sensor_model/launch/: learn_intrinsic_parameters.launch
src/multisense_sensor_model/params/: sensor_params.yaml  sensor_params_large_sigma.yaml
src/multisense_sensor_model/src/: box_info_publisher.cpp  hokuyo_beam_params_em.cpp  hokuyo_beam_params_em.h  sensor_model.cpp
src/multisense_sensor_model/worlds/: sensor_model_params.world
src/octomap_tests/: CMakeLists.txt  package.xml
src/octomap_tests/src/: octree_ray_test.cpp  octree_to_rviz_test.cpp
