<?xml version="1.0"?>
<package>
  <name>cylbot_description</name>
  <version>0.0.0</version>
  <description>ROS URDF files for Cylinder Bot</description>

  <maintainer email="digidevin@gmail.com">Devin Schwab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>multisense_sl_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <run_depend>multisense_sl_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>xacro</run_depend>
</package>
