<?xml version="1.0"?>
<package>
  <name>cylbot_mcl</name>
  <version>0.0.0</version>
  <description>The cylbot_mcl package</description>

  <maintainer email="dts34@case.edu">Devin Schwab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cylbot_motion_model</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>multisense_sensor_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cylbot_map_creator</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>cylbot_motion_model</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>multisense_sensor_model</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>cylbot_map_creator</run_depend>

</package>
